# kong

./: .gitignore  .gitmodules  Cargo.toml  README  README.md  doc.sh
.github/workflows/: rust.yml
alkindi/: Cargo.toml  README.md
alkindi/src/: lib.rs
doc/: API.md  DATA.md  README.md  api.md  kdata.md  kollection.md  krypto.md  style.css
example/hello/: Cargo.toml  example-config.toml
example/hello/src/: main.rs
example/hello/test-data/: admins.sqlite
hamming_distance/: Cargo.toml
hamming_distance/src/: lib.rs
hex_to_bytes/: Cargo.toml
hex_to_bytes/src/: lib.rs
krates/kdata/: Cargo.toml  README.md
krates/kdata/src/: accounts.rs  inputs.rs  lib.rs  property.rs  resource.rs  validate.rs
krates/kerror/: Cargo.toml  README.md
krates/kerror/src/: lib.rs
krates/klient/: .gitignore  Cargo.toml  README.md  example.toml  kong.js  pubspec.yaml
krates/klient/dart/: pubspec.yaml
krates/klient/dart/lib/: kong.dart
krates/klient/dart/lib/src/: api.dart  inputs.dart  properties.dart  utils.dart
krates/klient/dart/test/: utils_test.dart  validate_test.dart
krates/klient/example/: kong_example.dart
krates/klient/js/: accounts.js  kong-properties.js  kong.js  login.js  main.js  properties.js
krates/klient/lib/: kong.dart
krates/klient/lib/src/: api.dart  data.dart  inputs.dart  utils.dart  validate.dart
krates/klient/src/: main.rs
krates/klient/test/: kong_test.dart  utils_test.dart
krates/kogs/: Cargo.toml  README.md
krates/kogs/src/: lib.rs
krates/kollection/: Cargo.toml  README.md
krates/kollection/src/: lib.rs
krates/konfig/: Cargo.toml  README.md
krates/konfig/src/: defaults.rs  lib.rs
krates/kong/: Cargo.toml  README.md
krates/kong/src/: defaults.rs  error.rs  error_response.rs  inputs.rs  konfig.rs  kontrol.rs  kroute.rs  lib.rs  log.rs  outsource.rs  prelude.rs  read_kpassport.rs  validate.rs
krates/kong/src/konnect/: accounts.rs  mod.rs
krates/kong/src/kontrol/: accounts.rs  auth.rs  error_response.rs  issue_kpassport.rs  mod.rs
krates/konja/: README.md
krates/konnect/: Cargo.toml
krates/konnect/src/: accounts.rs  lib.rs
krates/kontainer/: Cargo.toml  example-SPIN.toml
krates/kontainer/src/: container.rs  lib.rs  main.rs
krates/kore/: Cargo.toml
krates/kore/src/: lib.rs
krates/krouter/: Cargo.toml
krates/krouter/src/: lib.rs
krates/krypto/: Cargo.toml  README.md
krates/krypto/src/: authentication.rs  defaults.rs  error.rs  key_derivation.rs  kpassport.rs  lib.rs  password.rs
krates/ktest/: Cargo.toml
krates/ktest/src/: main.rs
repeat_key_xor/: Cargo.toml
repeat_key_xor/src/: crack.rs  lib.rs
