[package]
name = "repeat_key_xor"
version = "0.1.0"
authors = ["merelydev <dev@merely.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hamming_distance = { path = "../hamming_distance/", version = "0.1.0" }
hex_to_bytes = { path = "../hex_to_bytes/", version = "0.1.0" }       
