[package]
name = "kollection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdata = { path = "../kdata/"}
kerror = { path = "../kerror/"}
rusqlite.workspace = true

[dev-dependencies]
chrono.workspace = true