[package]
name = "krypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrypt.workspace = true
blake3.workspace = true
chrono.workspace = true
base64.workspace = true
hex.workspace = true
kerror = { path = "../kerror/"}